--- a/ComplexTable.html
+++ b/ComplexTable.html
@@ -21,7 +21,7 @@
                         &nbsp;&nbsp;Cityville,NA 12<big>345</big>
         </td>
         <td colspan="2">
-            &nbsp;&nbsp;Customer:<br>
+            &nbsp;&nbsp;Customer::<br>
             &nbsp;&nbsp;John Smith<br>
             &nbsp;&nbsp;321 Willow Way<br>
             &nbsp;&nbsp;Southeast Northwestrshire,MA 54321
